starting with media queries

--- a/resources/styles/partials/_navlink.scss
+++ b/resources/styles/partials/_navlink.scss
@@ -3,11 +3,57 @@
 .wab-nav {
   background-color: var(--bs-navbar-bg);
 
+  // .container {
+  //   @include media-breakpoint-down(sm) {
+  //     flex-wrap: nowrap;
+  //   }
+  // }
+
+  // .container:has(.show) {
+  //   @include media-breakpoint-down(sm) {
+  //     flex-wrap: inherit;
+  //   }
+  // }
+
+
+  .navbar-collapse {
+    // @include media-breakpoint-down(lg) {
+    //     margin-left: unset !important;
+    //       flex-direction: column;
+    //       align-items: center !important;
+    //   }
+
+    //   @include media-breakpoint-down(md) {
+    //     // display: flex;
+    //     margin-left: unset !important;
+    //     flex-direction: column;
+    //     align-items: center !important;
+    //   }
+  }
+
   .navbar-nav {
+    @include media-breakpoint-down(lg) {
+      margin-left: unset !important;
+      align-items: flex-start !important;
+    }
+
+    .nav-item {
+      @include media-breakpoint-down(lg) {
+        flex-direction: column;
+        align-items: flex-start !important;
+      }
+
+      @include media-breakpoint-down(md) {
+        // align-items: center !important;
+      }
+    }
+
     .nav-link {
       position: relative;
       padding-left: 1rem;
       padding-right: 1rem;
+
+
 
       &:not(.active) {
         &::after {
@@ -18,7 +64,8 @@
           position: absolute;
           bottom: 0;
           left: 0;
-          transition: opacity #{$ease}, width #{$ease};
+          transition: opacity #{$ease},
+          width #{$ease};
           background-color: var(--accent-color);
         }
 
@@ -46,10 +93,14 @@
       height: 14px;
       margin-left: 8px;
       transition: rotate #{$ease};
+
+
     }
 
     .nav-link {
-      &:hover, &.show {
+
+      &:hover,
+      &.show {
         .icon {
           rotate: 45deg;
         }
@@ -66,182 +117,5 @@
 
   }
 
-  /*  &.dark-nav {
-      .btn {
-        --outline-color: #{$primary};
-        --bs-btn-bg: #{$dark};
-        --bs-btn-border-color: #{$light};
-        --bs-btn-color: #{$light};
-      }
 
-      .navbar-nav {
-        --bs-nav-link-color: #{$light};
-        --bs-nav-link-hover-color: #{$dark};
-      }
-
-      .dropdown-item {
-        transition: color #{$ease};
-
-        .icon {
-          transition: color #{$ease}, rotate #{$ease};
-        }
-      }
-
-      .dropdown-item:hover,
-      .dropdown-item:focus {
-        color: #{$primary};
-
-        .icon {
-          color: #{$primary};
-        }
-      }
-
-      .nav-link,
-      .dropdown {
-        &:not(.active) {
-          &::after {
-            background-color: #{$primary};
-          }
-        }
-      }
-
-      .dropdown-toggle::after {
-        display: none;
-      }
-
-      .nav-link {
-        color: #{$light};
-      }
-
-      .wab-highlight {
-        color: #{$dark};
-      }
-    }
-
-    &.yellow-nav {
-      background-color: #{$primary};
-
-      .btn {
-        --outline-color: #{$secondary};
-        --bs-btn-bg: #{$primary};
-        --bs-btn-border-color: #{$dark};
-        --bs-btn-color: #{$dark};
-        --bs-btn-hover-bg: #{$primary};
-        --bs-btn-hover-border-color: #{$dark};
-      }
-
-      .navbar-nav {
-        --bs-nav-link-color: #{$dark};
-        --bs-nav-link-hover-color: #{$light};
-
-        .navHighlight {
-          z-index: 0;
-        }
-      }
-
-      !*.dropdown-item:hover,
-      .dropdown-item:focus {
-        color: #{$primary};
-
-        .icon {
-          color: #{$primary};
-        }
-      }*!
-
-      .nav-link,
-      .dropdown {
-        &:not(.active) {
-          &::after {
-            background-color: #{$secondary};
-          }
-        }
-      }
-
-      .nav-link {
-        color: #{$dark};
-      }
-
-      .nav-link.active {
-        color: #{$light};
-
-        &.wab-highlight {
-          &:after {
-            background-image: url("/public/assets/highlight_secondary.svg");
-          }
-        }
-      }
-
-      .dropdown-menu {
-        --bs-dropdown-bg: var(--bs-primary);
-        --bs-dropdown-color: var(--bs-dark);
-        --bs-dropdown-link-color: var(--bs-body-dark);
-        --bs-dropdown-border-color: var(--bs-dark);
-        --bs-dropdown-link-hover-color: var(--bs-secondary);
-      }
-    }
-
-    &.white-nav {
-      background-color: #{$light};
-
-      .btn {
-        --outline-color: #{$primary};
-        --bs-btn-bg: #{$light};
-        --bs-btn-border-color: #{$dark};
-        --bs-btn-color: #{$dark};
-        --bs-btn-hover-bg: #{$primary};
-        --bs-btn-hover-border-color: #{$dark};
-      }
-
-      !*.navbar-nav {
-        --bs-nav-link-color: #{$light};
-        --bs-nav-link-hover-color: #{$dark};
-      }*!
-
-      !*.dropdown-item:hover,
-      .dropdown-item:focus {
-        color: #{$primary};
-
-        .icon {
-          color: #{$primary};
-        }
-      }*!
-
-      .nav-link,
-      .dropdown {
-        &:not(.active) {
-          &::after {
-            background-color: #{$primary};
-          }
-        }
-      }
-
-      .nav-link {
-        color: #{$dark};
-      }
-
-      .wab-highlight {
-        color: #{$dark};
-      }
-
-      .dropdown-menu {
-        --bs-dropdown-bg: var(--bs-light);
-        --bs-dropdown-color: var(--bs-dark);
-        --bs-dropdown-link-color: var(--bs-body-dark);
-        --bs-dropdown-border-color: var(--bs-dark);
-        --bs-dropdown-link-hover-color: var(--bs-secondary);
-        !*
-         --bs-dropdown-border-radius: 0;
-         --bs-dropdown-border-width: var(--bs-border-width);
-         --bs-dropdown-inner-border-radius: calc(0 - var(--bs-border-width));
-         --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
-         --bs-dropdown-divider-margin-y: 0.5rem;
-         --bs-dropdown-box-shadow: none;
-         --bs-dropdown-link-hover-color: var(--bs-body-color);
-         --bs-dropdown-link-hover-bg: var(--bs-tertiary-bg);
-         --bs-dropdown-link-active-color: #fff;
-         --bs-dropdown-link-active-bg: #f6e077;*!
-      }
-    }*/
 }
-
-
