--- a/resources/styles/partials/_accordion.scss
+++ b/resources/styles/partials/_accordion.scss
@@ -15,6 +15,7 @@
     // --bs-accordion-active-bg: transparent;
     // --bs-accordion-active-color: transparent;
     --bs-accordion-btn-padding-y: 2rem;
+    --bs-accordion-active-color: var(--accent-color-contrast);
   }
 
 
@@ -48,7 +49,6 @@
 
   .accordion-item:has(.show) {
     background-color: var(--accent-color);
-    --bs-accordion-active-color: #{$dark};
   }
 
   .accordion-item {
@@ -72,6 +72,8 @@
 
     .arrow {
       position: absolute;
+      width: 40px;
+      height: 40px;
       top: 50%;
       left: 0;
       transform: translate(0, -50%);
