--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -29,5 +29,6 @@ $enable-responsive-font-sizes: true;
 @import "./partials/contact";
 @import "./partials/diagonalAccordion";
 @import "./partials/sections";
+@import "./partials/about-us";
 @import "./chisiamo";
 @import "./servizi";
