--- a/resources/styles/partials/_spacing.scss
+++ b/resources/styles/partials/_spacing.scss
@@ -3,6 +3,11 @@
 .container-p-156 {
     padding-top: 156px;
     padding-bottom: 156px;
+
+    @include media-breakpoint-down(lg) {
+        padding-top: 4rem;
+        padding-bottom: 4rem;
+    }
 }
 
 .me-n6 {
