--- a/resources/styles/partials/_jumbo.scss
+++ b/resources/styles/partials/_jumbo.scss
@@ -16,6 +16,7 @@
     @include media-breakpoint-down(lg) {
         aspect-ratio: 1/1;
         object-fit: cover;
+        object-position: center;
     }
 }
 
