--- a/resources/styles/partials/_reset.scss
+++ b/resources/styles/partials/_reset.scss
@@ -15,3 +15,61 @@ hr {
 .icon {
     display: inline-block;
 }
+
+body {
+    .loader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 999;
+        background-color: var(--bs-body-bg);
+        transition: opacity .25s;
+        opacity: 0;
+        pointer-events: none;
+
+        .logo {
+            position: relative;
+
+            &:before{
+                content: "";
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 300px;
+                height: 300px;
+                transform: translate(-50%, -50%);
+                transform-origin: center;
+                border: 2px solid var(--accent-color);
+                z-index: -1;
+                animation: spin 2s linear infinite;
+            }
+        }
+    }
+
+    &.loading {
+        overflow: hidden;
+
+        .loader {
+            opacity: 1;
+            pointer-events: all;
+        }
+    }
+
+    .loader svg {
+        max-width: 500px;
+    }
+}
+
+@keyframes spin {
+    from{
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+    to{
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
