Adds scroll spy

--- a/resources/styles/partials/_navlink.scss
+++ b/resources/styles/partials/_navlink.scss
@@ -1,7 +1,41 @@
 @use "./variables";
+.navbar-container {
+  position: sticky;
+  top: 0;
+  z-index: 99;
+
+  &:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 1px;
+    background-color: var(--accent-color);
+    opacity: 1;
+    transition: width .3s;
+  }
+
+  .scroll-spy {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 3px;
+    background-color: var(--accent-color);
+    transition: width .2s;
+  }
+
+  &.scrolled {
+    &:after {
+      width: 100%;
+    }
+  }
+}
 
 .wab-nav {
   background-color: var(--bs-navbar-bg);
+
 
   // .container {
   //   @include media-breakpoint-down(sm) {
