--- a/resources/styles/partials/_accordion.scss
+++ b/resources/styles/partials/_accordion.scss
@@ -52,9 +52,16 @@
   }
 
   .accordion-item {
+    --icon-size: 40px;
+    --icon-container-size: 70px;
     color: var(--bs-accordion-active-color);
     transition: background-color #{$ease};
     position: relative;
+
+    @include media-breakpoint-down(sm){
+      --icon-size: 30px;
+      --icon-container-size: 50px;
+    }
 
     .cup {
       opacity: 0;
@@ -66,19 +73,18 @@
 
     .text {
       position: relative;
-      padding-left: 70px;
-      transition: padding #{$ease};
+      padding-left: var(--icon-container-size);
+      transition: padding #{$ease}, color #{$ease};
     }
 
     .arrow {
       position: absolute;
-      width: 40px;
-      height: 40px;
+      width: var(--icon-size);
+      height: var(--icon-size);
       top: 50%;
       left: 0;
       transform: translate(0, -50%);
-      transition: transform #{$ease},
-      left #{$ease};
+      transition: transform #{$ease}, left #{$ease};
       transform-origin: center;
     }
 
@@ -96,9 +102,11 @@
       box-shadow: none;
       display: flex;
       column-gap: 1rem;
+      padding-right: 0;
 
       &::after {
         background-image: none;
+        width: var(--icon-container-size);
       }
 
       &:hover {
@@ -115,11 +123,11 @@
 
         .arrow {
           left: 100%;
-          transform: translate(100%, -50%) rotate(135deg);
+          transform: translate(50%, -50%) rotate(135deg);
 
           @include media-breakpoint-down(lg) {
-            left: 100%;
-            transform: translate(20%, -50%) rotate(135deg);
+            //left: 100%;
+            //transform: translate(20%, -50%) rotate(135deg);
           }
         }
       }
