--- a/resources/styles/partials/_buttons.scss
+++ b/resources/styles/partials/_buttons.scss
@@ -5,6 +5,9 @@
     --outline-offset-y: var(--outline-offset);
     --outline-color: #{variables.$secondary};
     --bs-btn-border-width: 0;
+    --bs-btn-box-shadow: none;
+    --transition: .25s ease-in-out;
+    --transition-fast: .15s ease-in-out;
 
     position: relative;
     z-index: 0;
@@ -12,10 +15,12 @@
     gap: .5rem;
     align-items: center;
     justify-content: center;
+    transition: color var(--transition);
 
+    // sfondo colorato
     &:after {
         content: "";
-        border: 3px solid $dark;
+        border: 3px solid var(--bs-btn-border-color);
         display: block;
         position: absolute;
         top: 0;
@@ -23,7 +28,7 @@
         width: 100%;
         height: 100%;
         background: var(--bs-btn-bg);
-        transition: background #{$ease};
+        transition: background var(--transition), border-color var(--transition);
         z-index: -1;
     }
 
@@ -31,11 +36,12 @@
         &:after {
             // color: var(--bs-btn-hover-color);
             background-color: var(--bs-btn-hover-bg);
-            border: 0px solid $dark;
+            border-color: var(--bs-btn-hover-border-color);
             // border-color: var(--bs-btn-hover-border-color);
         }
     }
 
+    // Outline
     &:before {
         content: "";
         display: block;
@@ -45,20 +51,19 @@
         width: 100%;
         height: 100%;
         border: 3px solid var(--outline-color);
-        transition: top #{$ease},
-            right #{$ease};
+        transition: top var(--transition), right var(--transition), border-color var(--transition);
         z-index: -1;
     }
 
     img,
     .icon {
-        transition: rotate #{$ease};
+        transition: rotate var(--transition), transform var(--transition-fast);
         width: 18px;
         height: 18px;
     }
 
+    // on hover, rotate the icon and move the outline to merge with the button
     &:hover {
-
         img,
         .icon {
             rotate: 45deg;
@@ -70,7 +75,13 @@
         }
     }
 
+    // on active, maintain outline merged with the button and move the icon by 25% to right
     &:active {
+        img,
+        .icon {
+            transform: translate(25%, -25%);
+        }
+
         &:before {
             top: 0;
             right: 0;
@@ -79,20 +90,12 @@
 }
 
 .btn-themed {
-
+    --bs-btn-bg: var(--bs-body-bg);
+    --bs-btn-color: var(--bs-body-color);
+    --outline-color: var(--accent-color);
+    --bs-btn-border-color: var(--bs-body-color);
+    --bs-btn-hover-border-color: var(--accent-color);
+    --bs-btn-hover-bg: var(--accent-color);
+    --bs-btn-hover-color: var(--accent-color-contrast);
+    --bs-btn-active-color: var(--accent-color-contrast);
 }
-
-.btn-outline-primary {
-    --bs-btn-bg: #{variables.$light};
-    --bs-btn-border-color: #{variables.$dark};
-    --bs-btn-color: #{variables.$dark};
-    --outline-color: #{variables.$primary};
-}
-
-// .btn::after {
-//     border-width: 3px;
-
-//     // &:hover {
-//     //     border: 3px solid #{$primary};
-//     // }
-// }
