--- a/resources/styles/partials/_navlink.scss
+++ b/resources/styles/partials/_navlink.scss
@@ -2,7 +2,8 @@
 .navbar-container {
   position: sticky;
   top: 0;
-  z-index: 99;
+  // per farlo mostrare sopra l'offcanvas
+  z-index: 1041;
 
   &:after {
     content: "";
@@ -27,38 +28,119 @@
   }
 
   &.scrolled {
+    .wab-nav {
+      //--bs-navbar-padding-y: 0rem;
+    }
+
     &:after {
       width: 100%;
     }
   }
 }
 
+.bottom-navbar-container {
+  //--bs-nav-link-padding-x: 1rem;
+  //--bs-nav-link-padding-y: 0.5rem;
+  --bs-nav-link-color: var(--bs-body-color);
+  --bs-nav-link-hover-color: var(--bs-body-color);
+  --bs-nav-link-active-color: var(--bs-body-color);
+
+  position: sticky;
+  bottom: 0;
+  z-index: 99;
+  background-color: var(--bs-body-bg);
+
+  .navbar-nav {
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    .nav-item {
+      margin-bottom: 0;
+    }
+
+
+  }
+}
+
 .wab-nav {
+  --bs-navbar-padding-y: .5rem;
+  --bs-navbar-brand-padding-y: 0;
   background-color: var(--bs-navbar-bg);
+  transition: background-color .3s;
 
+  .navbar-brand {
 
-  // .container {
-  //   @include media-breakpoint-down(sm) {
-  //     flex-wrap: nowrap;
-  //   }
-  // }
+  }
 
-  // .container:has(.show) {
-  //   @include media-breakpoint-down(sm) {
-  //     flex-wrap: inherit;
-  //   }
-  // }
+  .btn-menu-toggler {
+    --bs-btn-padding-x: .85rem;
+    --bs-btn-padding-y: .65rem;
+    --outline-offset-x: calc(0px  - var(--outline-offset));
+    //position: fixed;
+    //bottom: 5%;
+    //right: 5%;
 
-  .btn-menu {
-    box-shadow: none;
+    .toggler-icon {
+      width: 24px;
+      height: 20px;
+      position: relative;
+      display: inline-block;
+    }
+
+    .toggler-line {
+      width: 100%;
+      height: 2px;
+      background-color: currentColor;
+      position: absolute;
+      left: 0;
+      transform-origin: left;
+      transform: rotate(0deg) translateX(0);
+      transition: background-color var(--transition), transform var(--transition), opacity var(--transition);
+
+      &:nth-child(1) {
+        top: 0px;
+      }
+
+      &:nth-child(2) {
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      &:nth-child(3) {
+        bottom: 0px;
+      }
+    }
+
+    &:not(.collapsed) {
+      &:before {
+        top: 0;
+        right: 0;
+      }
+
+      .toggler-line {
+        &:nth-child(1) {
+          transform: rotate(40deg) translate(3px, -1px);
+        }
+
+        &:nth-child(2) {
+          opacity: 0;
+          transform: translateX(-100%);
+        }
+
+        &:nth-child(3) {
+          transform: rotate(-40deg) translate(3px, 0px);
+        }
+      }
+    }
 
     &:before {
-      top: calc(5px - var(--outline-offset-y));
-      right: calc(5px - var(--outline-offset-x));
+      //top: calc(5px - var(--outline-offset-y));
+      //right: calc(5px - var(--outline-offset-x));
     }
 
     &:hover {
-
       .icon {
         rotate: 0deg;
       }
@@ -76,7 +158,6 @@
     }
   }
 
-
   .flex-menu {
     @include media-breakpoint-up(md) {
       display: flex;
@@ -87,19 +168,6 @@
       display: flex;
       justify-content: flex-end;
       flex-direction: column;
-    }
-
-    //   @include media-breakpoint-down(md) {
-    //     // display: flex;
-    //     margin-left: unset !important;
-    //     flex-direction: column;
-    //     align-items: center !important;
-    //   }
-  }
-
-  .btn {
-    @include media-breakpoint-down(lg) {
-      align-self: end;
     }
   }
 
@@ -126,8 +194,6 @@
       position: relative;
       padding-left: 1rem;
       padding-right: 1rem;
-
-
 
       &:not(.active) {
         &::after {
@@ -192,4 +258,8 @@
   }
 
 
+}
+
+#mobileMenuRight{
+  top: 72px;
 }
