--- a/resources/styles/partials/_cards.scss
+++ b/resources/styles/partials/_cards.scss
@@ -20,7 +20,9 @@
 }
 
 .service-card {
-  max-width: 250px;
+  width: 100%;
+  min-height: 100%;
+  //max-width: 250px;
   --bs-card-border-width: 0;
   --bs-card-bg: transparent;
   --bs-card-cap-bg: transparent;
