--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -18,6 +18,7 @@ $enable-responsive-font-sizes: true;
 @import "./partials/animations";
 @import "./partials/inputs";
 @import "./partials/buttons";
+@import "./partials/dropdowns";
 @import "./partials/cards";
 @import "./partials/lists";
 @import "./partials/spacing";
