--- a/resources/styles/partials/_offcanvas.scss
+++ b/resources/styles/partials/_offcanvas.scss
@@ -1,54 +1,35 @@
 @use "./variables";
 
-.wbaOffCanvas {
-    --bs-offcanvas-color: #{$dark};
-    --bs-offcanvas-bg: #{$light};
-    --bs-offcanvas-width: 500px;
+.offcanvas-contacts {
+    --bs-offcanvas-height: 50vh;
+    --bs-offcanvas-zindex: 1050;
+    --bs-offcanvas-border-width: 0;
 
-    .offcanvas-form {
-        --outline-offset-x: var(--outline-offset);
-        --outline-offset-y: var(--outline-offset);
-        --outline-color: #{variables.$primary};
-        position: relative;
-        z-index: 0;
-        background-color: #{$light};
-        // border: 3px solid var(--outline-color);
+    fieldset {
+        border: 3px solid var(--bs-body-color);
+        padding: 1rem;
 
-        &:after {
-            content: "";
-            border: 3px solid $dark;
-            display: block;
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 100%;
-            height: 100%;
-            background: #{$light};
-            // transition: all 0.3s;
-            z-index: -1;
+        .form-control {
+            border-color: var(--bs-body-color);
+            color: var(--bs-body-color);
+
+            &:autofill + label {
+                color: black;
+            }
+
+            &:focus {
+                border-color: var(--accent-color);
+                color: var(--accent-color);
+            }
         }
 
-        &:before {
-            content: "";
-            display: block;
-            position: absolute;
-            top: calc(0px - var(--outline-offset-y));
-            right: calc(0px - var(--outline-offset-x));
-            width: 100%;
-            height: 100%;
-            border: 3px solid var(--outline-color);
-            z-index: -1;
+        @include media-breakpoint-down(sm) {
+            padding: 0;
+            border: 0;
         }
     }
 
     .btn-close {
         --bs-btn-close-opacity: 1;
-    }
-
-    .btn {
-        --outline-color: #{$primary};
-        --bs-btn-bg: #{$light};
-        --bs-btn-border-color: #{$dark};
-        --bs-btn-color: #{$dark};
     }
 }
