Fixes mobile contact button

--- a/resources/styles/partials/_buttons.scss
+++ b/resources/styles/partials/_buttons.scss
@@ -98,6 +98,13 @@
             transform: translate(25%, -25%);
         }
 
+        &.point-down {
+            img,
+            .icon {
+                transform: translate(10%, -10%);
+            }
+        }
+
         &:before {
             top: 0;
             right: 0;
