--- a/resources/styles/admin.scss
+++ b/resources/styles/admin.scss
@@ -4,23 +4,50 @@
 @import "bootstrap/scss/bootstrap";
 @import 'animate.css';
 
-@import "./css_variables";
-
-//different themes
-@import "./themes/dark";
-@import "./themes/light";
-@import "./themes/yellow";
-
 $enable-responsive-font-sizes: true;
 
-/*@import "./partials/reset";
-@import "./partials/animations";
-@import "./partials/inputs";
-@import "./partials/buttons";
-@import "./partials/dropdowns";
-@import "./partials/cards";
-@import "./partials/lists";
-@import "./partials/spacing";
-@import "./partials/typography";
-@import "./partials/footer";
-@import "./partials/utility";*/
+:root {
+  --icons-size: 1rem;
+
+}
+
+[data-bs-theme="dark"] {
+  .card {
+    --bs-card-color: $light;
+  }
+
+  .pagination {
+    --bs-pagination-active-color: #{$dark};
+    --bs-pagination-color: #{$light};
+    justify-content: center;
+  }
+
+  .form-control, .form-select {
+    color: var(--bs-body-color);
+    background-color: var(--bs-form-control-bg);
+    border: var(--bs-border-width) solid var(--bs-border-color);
+
+    &:focus {
+      color: $light;
+      background-color: var(--bs-form-control-bg);
+      border-color: var(--bs-primary);
+      outline: 0;
+      box-shadow: 0 0 0 0.25rem var(--bs-primary-rgb);
+    }
+  }
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+}
+
+.icon {
+  display: inline-flex;
+  align-items: center;
+
+  svg {
+    width: var(--icons-size);
+    height: var(--icons-size);
+  }
+}
