--- a/resources/styles/admin.scss
+++ b/resources/styles/admin.scss
@@ -7,7 +7,7 @@
 $enable-responsive-font-sizes: true;
 
 :root {
-  --icons-size: 1rem;
+  --icons-size: 18px;
   --logo-accent: #{$primary}
 }
 
@@ -43,9 +43,16 @@ $enable-responsive-font-sizes: true;
   justify-content: center;
 }
 
+.nav-link{
+  .icon {
+    --icons-size: 1.5rem;
+  }
+}
+
 .icon {
   display: inline-flex;
   align-items: center;
+  vertical-align: middle;
 
   svg {
     width: var(--icons-size);
@@ -53,6 +60,19 @@ $enable-responsive-font-sizes: true;
   }
 
   &.icon-fluid {
-    --icon-size: 100%;
+    --icons-size: 100%;
   }
+}
+
+.loading-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
