translation doesm't work

--- a/resources/styles/partials/_footer.scss
+++ b/resources/styles/partials/_footer.scss
@@ -17,8 +17,12 @@ footer {
     @include media-breakpoint-down(lg) {
       justify-content: center;
       gap: 1rem;
-
-
+    }
+    
+    div{
+      @include media-breakpoint-down(lg) {
+        text-align: center;
+      }
     }
   }
 
