--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -1,9 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Zen+Dots&display=swap");
+//@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap");
+//@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Zen+Dots&display=swap");
 
 @import "./partials/_variables";
 @import "bootstrap/scss/bootstrap";
 @import 'animate.css';
-
+@import "./fonts/zenDot";
 
 @import "./css_variables";
 
