--- a/resources/styles/partials/_variables.scss
+++ b/resources/styles/partials/_variables.scss
@@ -33,7 +33,8 @@ $card-color: $dark;
 
 $font-size-base: 1rem;
 $font-family-sans-serif: "Kanit", sans-serif;
-$font-family-titles: "Zen Dots", sans-serif;
+//$font-family-titles: "Zen Dots", sans-serif;
+$font-family-titles: "Test Dots", sans-serif;
 
 $h1-font-size: $font-size-base * 4;
 $h2-font-size: $font-size-base * 3.25;
