Fixes diagonal accordion

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -16,6 +16,7 @@
 $enable-responsive-font-sizes: true;
 
 @import "./partials/reset";
+@import "./partials/loaders";
 @import "./partials/animations";
 @import "./partials/inputs";
 @import "./partials/buttons";
