Maintain space between wab-highlight elements

--- a/resources/styles/partials/_typography.scss
+++ b/resources/styles/partials/_typography.scss
@@ -33,6 +33,12 @@
   }
 }
 
+p .wab-highlight {
+  --x-offset: -.3em;
+  margin-left: .3em;
+  margin-right: .3em;
+}
+
 .icon {
   display: inline-flex;
   align-items: center;
