--- a/resources/styles/themes/_light.scss
+++ b/resources/styles/themes/_light.scss
@@ -48,4 +48,8 @@
     --color: #{variables.$dark};
     --wab-bg-highlight-url: url("/public/assets/highlight_primary.svg");
   }
+  
+  .neon-text {
+    --sign-color-off: #{lighten(variables.$primary, 15)};
+  }
 }
