--- a/resources/styles/partials/_footer.scss
+++ b/resources/styles/partials/_footer.scss
@@ -41,6 +41,21 @@ footer {
     }
   }
 
+
+  .lang-logo {
+    max-width: 45px;
+    // height: 50px;
+    // font-size: 100px;
+    display: flex;
+    align-items: center;
+
+    // @include media-breakpoint-down(lg) {
+    //   width: 100px;
+    //   height: 100px;
+    //   font-size: 50px;
+    // }
+  }
+
   .col:has( > button) {
     @include media-breakpoint-down(lg) {
       display: flex;
