--- a/resources/styles/partials/_diagonalAccordion.scss
+++ b/resources/styles/partials/_diagonalAccordion.scss
@@ -4,7 +4,7 @@
     rotate: 15deg;
     margin-top: -8rem;
 
-    .arrow{
+    .arrow {
         max-width: 40px;
     }
 
@@ -17,15 +17,18 @@
 
         .nav-link {
             color: #{$light};
-            text-shadow: 0px 0 #{$primary}, 0 0px #{$primary}, 0px 0 #{$primary},
-                0 0px #{$primary};
+            text-shadow: 0px 0 #{$primary},
+            0 0px #{$primary},
+            0px 0 #{$primary},
+            0 0px #{$primary};
 
             display: flex;
             align-items: flex-end;
             align-content: center;
             border-bottom: 3px solid #{$primary};
             text-align: left;
-            transition: color #{$ease}, text-shadow #{$ease};
+            transition: color #{$ease},
+            text-shadow #{$ease};
 
             .position-relative:has(.positioning) {
                 min-height: 100px;
@@ -43,14 +46,18 @@
 
             .icon {
                 // margin-bottom: 0.3rem;
-                transition: color #{$ease}, rotate #{$ease}, transform #{$ease};
+                transition: color #{$ease},
+                rotate #{$ease},
+                transform #{$ease};
                 width: 40px;
             }
 
             .number {
                 color: #{$light};
                 transform: translateX(0%);
-                transition: color #{$ease}, transform #{$ease}, text-shadow #{$ease};
+                transition: color #{$ease},
+                transform #{$ease},
+                text-shadow #{$ease};
             }
 
             &:hover,
@@ -68,11 +75,13 @@
                         rotate: 90deg;
                     }
                 }
+
                 &:nth-of-type(2) {
                     .icon {
                         rotate: 120deg;
                     }
                 }
+
                 &:nth-of-type(3) {
                     .icon {
                         rotate: 140deg;
@@ -88,11 +97,17 @@
 
             &.active {
                 color: #{$dark} !important;
-                text-shadow: -1px 0 #{$primary}, 0 1px #{$primary}, 1px 0 #{$primary}, 0 -1px #{$primary};
+                text-shadow: -1px 0 #{$primary},
+                0 1px #{$primary},
+                1px 0 #{$primary},
+                0 -1px #{$primary};
 
                 .number {
                     color: #{$dark} !important;
-                    text-shadow: -1px 0 #{$primary}, 0 1px #{$primary}, 1px 0 #{$primary}, 0 -1px #{$primary};
+                    text-shadow: -1px 0 #{$primary},
+                    0 1px #{$primary},
+                    1px 0 #{$primary},
+                    0 -1px #{$primary};
                 }
 
                 .icon {
@@ -138,12 +153,12 @@
     }
 
     .nav-pills .nav-link.active,
-    .nav-pills .show > .nav-link {
+    .nav-pills .show>.nav-link {
         color: #{$primary};
         background-color: transparent;
     }
 
-    & ~ .tab-content {
+    &~.tab-content {
         position: relative;
         // we must use min-height because the height of the element is not fixed due to text translation and length
         min-height: 172px;
